Chg: Makes the header stick to the top.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 </head>
 <body><!-- class="started/stopped" -->
     <div id="wrapper">
-    <header class="navbar navbar-static-top nav" id="top" role="banner">
+    <header class="navbar navbar-fixed-top nav" id="top" role="banner">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
