Chg: Concatenate CSS files into a single one

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,10 @@
 	<title>Rubik's Cube Timer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-
-	<!-- Bootstrap Material Design -->
-	<link href="css/bootstrap-material-design.min.css" rel="stylesheet">
-	<link href="css/ripples.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/cube-timer.css">
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="js/jquery.min.js"></script>
-
-	<link rel="stylesheet" href="css/timer.css">
 </head>
 <body><!-- class="started/stopped" -->
 	<div id="wrapper">
