--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 					</li>
 					<li>
 						<a id="config-button" href="#">
-							<span class="glyphicon glyphicon-cog"></span>
+							<i class="material-icons">settings</i>
 							Configuration
 						</a>
 					</li>
@@ -59,26 +59,31 @@
 			<div class="col-md-8">
 				<p id="hint" class="alert alert-info alert-dismissible" style="display: none">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
+						<i class="material-icons">close</i>
 					</button>
 					Hint: To start/stop the timer press <span class="label label-default">space bar</span>.
 				</p>
-				<div class="panel panel-default">
+				<div class="panel panel-default panel-timer">
 					<div class="panel-body">
 						<div class="text-center">
 							Scramble:
 							<span id="scramble"></span>
 						</div>
-						<div id="timer" class="text-center">00:00.00</div>
+						<div id="timer-container">
+							<span id="timer" class="text-center">00:00.00</span>
+							<a href="javascript:void(0)" class="btn btn-default btn-fab btn-share">
+								<i class="material-icons">share</i>
+							</a>
+						</div>
 					</div>
 					<div class="panel-footer start-stop-container">
 						<button class="start-stop btn btn-primary btn-lg">
 							<span class="start">
-								<span class="glyphicon glyphicon-play"></span>
+								<i class="material-icons">play_arrow</i>
 								Start
 							</span>
 							<span class="stop">
-								<span class="glyphicon glyphicon-stop"></span>
+								<i class="material-icons">stop</i>
 								Stop
 							</span>
 						</button>
@@ -128,10 +133,10 @@
 					<div class="panel-heading">
 						<div class="btn-group btn-group-raised pull-right" role="group">
 							<button id="export" type="button" class="btn btn-default btn-xs" title="Export">
-								<span class="glyphicon glyphicon-export"></span>
+								<i class="material-icons">file_download</i>
 							</button>
 							<button id="import" type="button" class="btn btn-default btn-xs" title="Import">
-								<span class="glyphicon glyphicon-import"></span>
+								<i class="material-icons">file_upload</i>
 							</button>
 						</div>
 						<h3 class="panel-title">Times</h3>
@@ -147,7 +152,7 @@
 											<div class="value list-group-item-heading"></div>
 											<div class="actions action-secondary">
 												<button class="btn btn-default btn-xs btn-remove">
-													<span class="glyphicon glyphicon-minus"></span>
+													<i class="material-icons">remove</i>
 												</button>
 											</div>
 											<div class="tags list-group-item-text"></div>
@@ -179,7 +184,9 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<i class="material-icons">close</i>
+					</button>
 					<h4 class="modal-title">Configuration</h4>
 				</div>
 				<div class="modal-body">
@@ -220,6 +227,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">
+						<i class="material-icons">close</i>
 						Close
 					</button>
 				</div>
@@ -231,7 +239,9 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<i class="material-icons">close</i>
+					</button>
 					<h4 class="modal-title">Export Times</h4>
 				</div>
 				<div class="modal-body">
@@ -239,6 +249,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">
+						<i class="material-icons">close</i>
 						Close
 					</button>
 					<button id="export-download" type="button" class="btn btn-primary" data-dismiss="modal">
@@ -253,24 +264,28 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<i class="material-icons">close</i>
+					</button>
 					<h4 class="modal-title">Import Times</h4>
 				</div>
 				<div class="modal-body">
 					<div class="btn-group" role="group">
 						<button id="import-from-file" type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-open"></span>
+							<i class="material-icons">file_upload</i>
 							Load from local file
 						</button>
 
 						<button id="import-from-drive" type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-open"></span>
+							<i class="material-icons">file_upload</i>
 							Load from Google Drive
 						</button>
 					</div>
 
 					<div id="import-error" class="alert alert-dismissible alert-danger">
-						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<button type="button" class="close" data-dismiss="alert">
+							<i class="material-icons">close</i>
+						</button>
 						<span class="content"></span>
 					</div>
 
@@ -280,12 +295,15 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">
+						<i class="material-icons">close</i>
 						Close
 					</button>
 					<button id="import-append" type="button" class="btn btn-primary" data-dismiss="modal">
+						<i class="material-icons">add</i>
 						Append
 					</button>
 					<button id="import-replace" type="button" class="btn btn-primary" data-dismiss="modal">
+						<i class="material-icons">content_paste</i>
 						Replace
 					</button>
 				</div>
