New: Translate strings using chrome.i18n.getMessage()

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<!-- Mobile support -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title class="i18n" i18n-key="appName">Rubik's Cube Timer</title>
+	<title i18n-key="appName">Rubik's Cube Timer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
 	<link rel="stylesheet" href="css/cube-timer.css">
@@ -23,7 +23,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="#" class="navbar-brand i18n" i18n-key="appShortName">Cube Timer</a>
+				<a href="#" class="navbar-brand" i18n-key="appShortName">Cube Timer</a>
 			</div>
 			<nav id="bs-navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
@@ -42,7 +42,7 @@
 					<li>
 						<a id="config-button" href="#">
 							<i class="material-icons">settings</i>
-							<span class="i18n" i18n-key="configuration">Configuration</span>
+							<span i18n-key="configuration">Configuration</span>
 						</a>
 					</li>
 				</ul>
@@ -56,14 +56,14 @@
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 						<i class="material-icons">close</i>
 					</button>
-					<span class="i18n" i18n-key="hintSpacebar">
+					<span i18n-key="hintSpacebar">
 						Hint: To start/stop the timer press <span class="label label-default">space bar</span>.
 					</span>
 				</p>
 				<div class="panel panel-default panel-timer">
 					<div class="panel-body">
 						<div class="text-center">
-							<span class="i18n" i18n-key="scrambleLabel">Scramble:</span>
+							<span i18n-key="scrambleLabel">Scramble:</span>
 							<span id="scramble"></span>
 						</div>
 						<div id="timer-container">
@@ -77,11 +77,11 @@
 						<button class="start-stop btn btn-primary btn-lg">
 							<span class="start">
 								<i class="material-icons">play_arrow</i>
-								<span class="i18n" i18n-key="buttonStart">Start</span>
+								<span i18n-key="buttonStart">Start</span>
 							</span>
 							<span class="stop">
 								<i class="material-icons">stop</i>
-								<span class="i18n" i18n-key="buttonStop">Stop</span>
+								<span i18n-key="buttonStop">Stop</span>
 							</span>
 						</button>
 					</div>
@@ -136,7 +136,7 @@
 								<i class="material-icons">file_upload</i>
 							</button>
 						</div>
-						<h3 class="panel-title i18n" i18n-key="panelResults">Times</h3>
+						<h3 class="panel-title" i18n-key="panelResults">Times</h3>
 					</div>
 					<div class="panel-body">
 						<div id="times" class="table-responsive">
@@ -169,7 +169,7 @@
 	</div><!-- wrapper -->
 	<div id="footer" role="contentinfo">
 		<div class="container">
-			<p class="credit i18n" i18n-key="footer">
+			<p class="credit" i18n-key="footer">
 				Designed and built by
 				<a href="https://twitter.com/resamsel" target="_blank">@resamsel</a>.
 				<a href="https://github.com/resamsel/cube-timer" target="_blank">GitHub</a>. Code licensed <a rel="license" href="https://github.com/resamsel/cube-timer/blob/master/LICENSE" target="_blank">GPLv2</a>.
