--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-8 col-md-offset-2">
 				<p id="hint" class="alert alert-info alert-dismissible" style="display: none">
 					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 						<i class="material-icons">close</i>
