New: Add more stats, like median and standard deviation

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,30 @@
 								<span class="value">00:00.00</span>
 								<span class="label label-success">best #12</span>
 							</div>
+							<div id="stats-worst" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">worst</span>
+							</div>
+							<div id="stats-worst5" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">worst #5</span>
+							</div>
+							<div id="stats-worst12" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">worst #12</span>
+							</div>
+							<div id="stats-stddev" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">stddev</span>
+							</div>
+							<div id="stats-stddev5" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">stddev #5</span>
+							</div>
+							<div id="stats-stddev12" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">stddev #12</span>
+							</div>
 							<div id="stats-average" class="list-group-item stat">
 								<span class="value">00:00.00</span>
 								<span class="label label-success">avg</span>
@@ -126,6 +150,26 @@
 							<div id="stats-average10of12" class="list-group-item stat">
 								<span class="value">00:00.00</span>
 								<span class="label label-success">avg #10/12</span>
+							</div>
+							<div id="stats-median" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">median</span>
+							</div>
+							<div id="stats-median5" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">median #5</span>
+							</div>
+							<div id="stats-median12" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">median #12</span>
+							</div>
+							<div id="stats-median3of5" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">median #3/5</span>
+							</div>
+							<div id="stats-median10of12" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">median #10/12</span>
 							</div>
 						</div>
 					</div>
