New: Add stat average of best 80% results

--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,10 @@
 								<span class="value">00:00.00</span>
 								<span class="label label-success">avg #12</span>
 							</div>
+							<div id="stats-average80" class="list-group-item stat">
+								<span class="value">00:00.00</span>
+								<span class="label label-success">avg 80%</span>
+							</div>
 							<div id="stats-average3of5" class="list-group-item stat">
 								<span class="value">00:00.00</span>
 								<span class="label label-success">avg #3/5</span>
