Chg: Make the chart more usable

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
 				</div>
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<div id="ct-stats" class="ct-double-octave"></div>
+						<div id="ct-stats" class="ct-major-twelfth"></div>
 						<div id="stats" class="list-group">
 							<div id="stats-template" class="list-group-item stat template">
 								<span class="value">00:00.00</span>
