Chg: Introduce modular architecture

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 						<li>
 							<a id="results-button" href="#">
 								<i class="material-icons">assessment</i>
-								<span i18n-key="results">Times</span>
+								<span i18n-key="results">Results</span>
 							</a>
 						</li>
 						<li>
@@ -217,20 +217,6 @@
 											<input id="subtext" type="checkbox" />
 											<span class="checkbox-material"><span class="check"></span></span>
 											<span i18n-key="showCategoryLabels">Show <span class="label label-info">sub X</span> labels</span>
-										</label>
-									</div>
-								</div>
-							</div>
-							<div id="statsHighlights" class="form-group">
-								<div class="col-form-4 control-label">
-									<span i18n-key="statsShow">Show</span>
-								</div>
-								<div class="col-form-8 stats-content">
-									<div class="template checkbox">
-										<label>
-											<input id="stat-template" type="checkbox" stat="template" />
-											<span class="checkbox-material"><span class="check"></span></span>
-											<span class="label label-success">best</span>
 										</label>
 									</div>
 								</div>
