New: Add high-res icon for Android

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<title i18n-key="appName">Rubik's Cube Timer</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
+	<meta name="theme-color" content="#3f51b5">
+	<link rel="icon" sizes="128x128" href="img/icon-128.png">
+
 	<link rel="stylesheet" href="css/cube-timer.css">
 </head>
 <body class="material"><!-- class="started/stopped" -->
