New: Update dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</li>
 		<li class="auth-google-signed-in">
-			<a class="google-sign-out">Sign out</a>
+			<a class="google-sign-out indigo-text" i18n-key="authSignOut">Sign out</a>
 		</li>
 	</ul>
 	<div class="navbar-fixed">
